ChangeLog

Upcoming version
[TASK]    Raise requirement of TYPO3 to 11.5.11, https://github.com/tpwd/ke_search/issues/208
[DOCS]    Add documentation about using custom labels

Version 5.2.1, 12 January 2024
[TASK]    Remove dependency to AbstractPlugin, https://github.com/tpwd/ke_search/issues/204
[TASK]    Remove usages of GeneralUtility::_GET, GeneralUtility::_GP, $_GET and $_POST, https://github.com/tpwd/ke_search/issues/205
[TASK]    Refactor id variable in BackendModuleController to make extension scanner happy
[TASK]    Add ignore annotations for extension scanner false positives
[TASK]    Replace usage of deprecated functions orX() and andX()
[TASK]    Add label to "Index Overview" widget (shown since TYPO3 12), and use only one color in the bar chart
[TASK]    Use ContextualFeedbackSeverity instead of AbstractMessage to set severity
[TASK]    Register upgrade wizards using attributes
[BUGFIX]  Don't index files from hidden file references. Thanks to Kamel Ben Yedder, https://github.com/tpwd/ke_search/issues/206

Version 5.2.0, 8 December 2023
[!!!]     The pagebrowser is now rendered in a different way (using the pagination API). If you used a custom template for the pagebrowser you will have to adopt it. Have a look at Resources/Private/Partials/PageBrowser.html
[TASK]    Use pagination API to render pagination, https://github.com/tpwd/ke_search/issues/174 and https://github.com/tpwd/ke_search/issues/154
[TASK]    Properly type-hint IndexerBase constructor, thanks to hotbytes-dev, https://github.com/tpwd/ke_search/pull/202
[BUGFIX]  Avoid undefined array key warning for "sphinxLimit"

Version 5.1.3, 10 November 2023
[BUGFIX]  Replace all occurences of additional word characters, not only the first one. Thanks to K. Quiatkowski. https://github.com/tpwd/ke_search/issues/19
[TASK]    Show hidden content in backend module "Indexed content" function
[DOCS]    Add hint about using the additional word characters feature for searching for @ when using InnoDB